--- a/typescript_mongodb_skeleton/package.json
+++ b/typescript_mongodb_skeleton/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf ./build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.7",
     "@types/node": "^20.8.9",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
   }
