--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Any quick tutorials or projects done for fun or learning",
   "main": "index.js",
   "scripts": {
+    "leetcode:random": "node find-random-leetcode-for-review",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
